--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
@@ -24,6 +26,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
     "jest": "^27.0.4",
     "prettier": "^2.3.0",
     "ts-jest": "^27.0.2",
