--- a/package.json
+++ b/package.json
@@ -13,24 +13,20 @@
       "test": "jest"
    },
    "dependencies": {
-      "@types/faker": "^5.5.6",
-      "@types/jest": "^26.0.23",
       "axios": "^0.21.1",
-      "cors": "^2.8.5",
       "express": "^4.17.1",
       "faker": "^5.5.3",
-      "mysql": "^2.14.1",
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.34",
-      "uuid": "^8.3.2"
+      "typeorm": "0.2.34"
    },
    "devDependencies": {
       "@commitlint/cli": "^12.1.4",
       "@commitlint/config-conventional": "^12.1.4",
       "@types/axios": "^0.14.0",
       "@types/express": "^4.17.12",
-      "@types/node": "^8.0.29",
+      "@types/faker": "^5.5.6",
+      "@types/jest": "^26.0.23",
       "@typescript-eslint/eslint-plugin": "^4.26.0",
       "@typescript-eslint/parser": "^4.18.0",
       "eslint": "^7.27.0",
@@ -43,9 +39,8 @@
       "husky": "^6.0.0",
       "jest": "^27.0.4",
       "prettier": "^2.3.0",
-      "ts-jest": "^27.0.3",
-      "ts-node": "3.3.0",
+      "ts-jest": "^27.0.2",
       "ts-node-dev": "^1.1.6",
-      "typescript": "3.3.3333"
+      "typescript": "^4.3.2"
    }
 }
